2018-11-22 6.88c Ulrike Fischer
   * Added support for pdflinkmargin for xetex

2018-11-17 6.88b David Carlisle
   * Ensure Producer field in PDF shows LuaTeX version with two digits (Ulrike Fischer)

2018-09-30 6.88a  David Carlisle
    * Reorganise README and ChangeLog moving most of README into the manual
      and maintaining README.md as markdown and ChangeLog.txt as text
    * Document NoHyper in the manual (copied from hyperref.dtx) for github issue 55
    *  hyperref.dtx: Add \protected@file@percent for github issue 70
    * Adjust default pdfcreator and add addtopdfcreator key for githb issue 53
    * Use \scdefault not always sc as font shape for frenchlinks, github issue 64.
    * Greek Autoref support, issue #52

2018-04-02  6.87a  David Carlisle
    * 6.87a
    * Silence babel messages in pdfstringdef issue #59

2018-02-06  6.86b  David Carlisle
    * 6.86b
    * Fix packaging of luatex.dtx (reported on tex.sx)
    * Don't include test directory on ctan (still on github)

2017-09-29  6.86a  David Carlisle
    * 6.86a
    * bump version and fix documentation markup
    * fixes to xsl and other minor build adjustments
    * send driver message just to log, issue #9
    * add \and to the list of commands locally made safe in pdf title info, issue #44
    * for issue #50 add pdf source zip from texmf-dist/doc/latex/hyperref-docsrc

2017-09-29  6.85a  David Carlisle
    * 6.85a
    * Make driver auto detect info not message (so just log not terminal) issue #9
    * Make \and locally "; " while making pdf info string issue #44

2017-09-29  6.85a  Ulrike Fischer
    * 6.85a
    * don't define \noboundary as text command / issue 37 (#45)
    * changed default pdfversion from 2 to 5, along the default settings in the current tex systems
    * change with pdfa version to 4 only if the current version is smaller, see issue #38
    * removed \noboundary from puarenc.def, see issue #37
    * Issue #38: change version to 1.4 with pdfa only if it is smaller (#43)