@@ -1,0 +1,5 @@
+testfiledir  = "testfiles-xetex"
+testsuppdir  = testfiledir .. "/support"
+checkengines={"xetex"}
+stdengine="xetex"
+
